# src/routes/image.rs
@@ -5,15 +5,15 @@ use actix_web::{
 
 use crate::{
     routes::default::{
-        RequestParameters, GetStringResponse, GetI64Response,
+        RequestParameters, GetStringResponse, GetDateResponse,
         send_xml, send_csv, return_internal_server_error,
-        get_auth, get_url, get_xmlns, get_pid
+        get_auth, get_date, get_url, get_xmlns
     },
     forms::{
         r#in::xml::defaults::CallData,
         out::{
-            xml::prices::error_struct_xml,
-            csv::prices::HU_HEADERS
+            xml::images::error_struct_xml,
+            csv::images::HU_HEADERS
         }
     },
     service::{
@@ -21,12 +21,12 @@ use crate::{
         log::log_with_ip_uuid,
         ipv4::log_ip,
         get_data::{RequestGet, ResponseGet},
-        get::prices::{PricesData, PricesCSV}
+        get::images::{ImagesData, ImagesCSV}
     }
 };
 
 /// Name of the current request
-const REQUEST_NAME: &'static str = "PRICES REQUEST";
+const REQUEST_NAME: &'static str = "IMAGES REQUEST";
 
 /// Handler
 async fn handler(req: HttpRequest, params: RequestParameters) -> impl Responder {
@@ -44,7 +44,7 @@ async fn handler(req: HttpRequest, params: RequestParameters) -> impl Responder 
 
     // Getting XMLNS from parameters, otherwise using url
     let xmlns = get_xmlns(&params, &url);
-    
+
     // Creating call data from parameters
     let call_data = CallData {
         // Getting authentication code from parameters
@@ -54,10 +54,12 @@ async fn handler(req: HttpRequest, params: RequestParameters) -> impl Responder 
         },
         url: url,
         xmlns: xmlns,
-        // Getting partner ID from parameters
-        pid: match get_pid(REQUEST_NAME, &ip_address, &uuid, &params, error_struct_xml) {
-            GetI64Response::Number(pid) => Some(pid),
-            GetI64Response::Response(response) => return response
+        pid: None,
+        // Getting `from_date` from parameters
+        from_date: if let GetDateResponse::DateTime(datetime) = get_date(REQUEST_NAME, &ip_address, &uuid, params.from_date, error_struct_xml, Some("from_date"), true) {
+            Some(datetime)
+        } else {
+            None
         },
         language: params.language,
         data_type: params.data_type,
@@ -71,22 +73,29 @@ async fn handler(req: HttpRequest, params: RequestParameters) -> impl Responder 
     let is_hu = call_data.is_hu();
 
     // Getting data
-    let data = RequestGet::Prices(call_data).to_data().await;
+    let data = RequestGet::Images(call_data).to_data().await;
 
     // After log
     log_with_ip_uuid(&ip_address, &uuid, format!("After {} got", REQUEST_NAME));
 
     // Handling got data
     match data {
-        ResponseGet::Prices(PricesData::CSV(PricesCSV::En(d))) => send_csv(&d.prices, "prices.csv", if is_hu { Some(HU_HEADERS) } else { None }),
-        ResponseGet::Prices(PricesData::XML(d)) => send_xml(d.to_xml()),
+        ResponseGet::Images(ImagesData::CSV(ImagesCSV::En(d))) => send_csv(&d.products, "images.csv", if is_hu { Some(HU_HEADERS) } else { None }),
+        ResponseGet::Images(ImagesData::XML(d)) => send_xml(d.to_xml()),
         _ => return_internal_server_error()
     }
 }
 
 
 /// GET handler
-#[get("/get-prices")]
-async fn get_handler(req: HttpRequest, query: Query<RequestParameters>) -> impl Responder {
+#[get("/get-image")]
+pub async fn get(req: HttpRequest, query: Query<RequestParameters>) -> impl Responder {
+    handler(req, query.into_inner()).await
+}
+
+
+/// GET handler alias
+#[get("/get-images")]
+pub async fn get_alias(req: HttpRequest, query: Query<RequestParameters>) -> impl Responder {
     handler(req, query.into_inner()).await
 }
